--- a/index.premin.html
+++ b/index.premin.html
@@ -21,8 +21,8 @@ B.style = `background:#112;color:#fff;user-select:none;text-align:center`;
 
 // instrument select
 [...`∿🎻🎷🎹`].map((i,j)=>                               // instrument icons
-    B.innerHTML += i +                                     // icon
-        `<input type=radio name=I checked onmousedown=I=${ // radio input
+    B.innerHTML += `<big>${i                               // icon
+        }<input type=radio name=I checked onmousedown=I=${ // radio input
     3 - j}>`);                                             // instrument select
 
 // piano keys
