--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ I = 0;                // instrument type
 
 // instrument select
 [...`∿🎻🎷🎹`].map((i,j)=>                           // instrument icons
-    K.innerHTML += `<big>${i                           // icon
+    K.innerHTML += `${i                                // icon
     }<input type=radio name=I checked onmousedown=I=${ // radio input
     3 - j}> &nbsp;`);                                  // instrument select
 
