--- a/index.html
+++ b/index.html
@@ -73,22 +73,15 @@ P = i=> i < 0 || A[i] || // is valid and note not playing?
         [...`4`],    // ∿ sine
     ][ I ].map(j=>(
         o = C.createOscillator(),                 // create oscillator
-        o.connect(                                // oscillator to gain1
-            g = C.createGain(                     // create start gain node
+        o.connect(                                // oscillator to gain
+            o.g = C.createGain(                   // create gain node
                 o.frequency.value =               // set frequency
                     j * 55 *                      // A 55 root note
                     2**((i+3)/12                  // music scale formula
                         + O.value*1               // octave control
                         + Y.value/12)))           // key control
-        .connect(                                 // gain1 to gain2
-            o.g = C.createGain())                 // create end gain node
-        .connect(C.destination),                  // gain2 to destination
-        g.gain.linearRampToValueAtTime(           // set start gain off
-            g.gain.value = 0,                     // set gain to 0
-            C.currentTime + .02),                 // set start time
-        g.gain.linearRampToValueAtTime(           // set gain start ramp
-            .2/(1+Math.log2(j)),                  // scale gain
-            C.currentTime + .05),                 // ramp on gain
+        .connect(C.destination),                  // gain to destination
+        o.g.gain.value = .2/(1+Math.log2(j)),     // set gain
         o.type =                                  // oscilator type
             S.options[S.selectedIndex].innerHTML, // get type setting
         o.start(),                                // play sound
@@ -103,12 +96,12 @@ X = i=> A[i] &&  // is note playing?
     k.style.transition = `.5s`, // set transition
     k.style.background = k.g,   // reset original color
 
-    A[i].map(j=>
-        setTimeout(e=>j.stop(), 350,          // stop sound after delay
-            j.g.gain.linearRampToValueAtTime( // set full gain
-                1, C.currentTime + .02),      // wait a split second
-            j.g.gain.linearRampToValueAtTime( // ramp gain off
-                A[i] = 0, C.currentTime + .3) // clear note  
+    A[i].map(o=>
+        setTimeout(e=>o.stop(), 350,            // stop sound after delay
+            o.g.gain.linearRampToValueAtTime(   // set gain start ramp
+                o.g.gain.value, C.currentTime), // set gain
+            o.g.gain.linearRampToValueAtTime(   // ramp off gain
+                A[i] = 0, C.currentTime + .3)   // clear note  
         )
     )
 );
@@ -121,8 +114,8 @@ onblur = e=> A.map((e,i)=> X(i));
 
 // keyboard key to piano key
 T = i=>
-    (k = `zsxdcvgbhnjm,l.;/q2w3er5t6y7ui9o0p[=]` // map key to note
-    .indexOf(i.key.toLowerCase()),               // find key in string
+    (k = `ZSXDCVGBHNJM,L.;/Q2W3ER5T6Y7UI9O0P[=]` // map key to note
+    .indexOf(i.key.toUpperCase()),               // find key in string
     k - 5 * (k > 16));                           // remap second row of keys
 
 // play note on key down
